--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ crate-type = ["staticlib"]
 
 [dependencies]
 rlibc = "1.0"
+x86 = "0.8.1"
+spin = "0.4.4"
+lazy_static = { version = "1.0", features = ["spin_no_std"] }
